--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,4 +1,5 @@
 .main-content {
+    margin: 0 20%;
     display: grid;
     grid-template-columns:  auto auto auto;
     grid-column-gap: 10px;
